Container fix on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -52,10 +52,10 @@ $ti-w: 31px;
   and (orientation: portrait) {
   /* line 10, /Users/Amani/.rvm/gems/ruby-2.3.0/gems/bootstrap-sass-3.3.7/assets/stylesheets/bootstrap/_grid.scss */
   .container {
-    width: 95%;
+    width: 98%;
   }
 
   .all-peegin {
-    margin-top: 195px;
+    margin-top: 198px;
   }
 }
